syntax = "proto3";
package core.protos.playbooks;

import "google/protobuf/wrappers.proto";
import "google/protobuf/struct.proto";

message Signoz {
  message ClickhouseQueryTask {
    google.protobuf.StringValue query = 1;
    google.protobuf.StringValue request_type = 2;  // "logs" or "traces" for v5 API requestType (maps to "raw" or "trace")
  }

  message BuilderQueryTask {
    google.protobuf.StringValue builder_queries = 1;
    google.protobuf.Int32Value step = 2;
    google.protobuf.StringValue panel_type = 3;
  }

  message DashboardDataTask {
    google.protobuf.StringValue dashboard_name = 1;
    google.protobuf.Int32Value step = 2;
    google.protobuf.StringValue panel_type = 3;
    google.protobuf.StringValue variables_json = 4;
  }

  message FetchDashboardsTask {
    // No additional parameters needed for fetching all dashboards
  }

  message FetchDashboardDetailsTask {
    google.protobuf.StringValue dashboard_id = 1;
  }

  message FetchServicesTask {
    google.protobuf.StringValue start_time = 1;
    google.protobuf.StringValue end_time = 2;
    google.protobuf.StringValue duration = 3;
  }

  message FetchApmMetricsTask {
    google.protobuf.StringValue service_name = 1;
    google.protobuf.StringValue start_time = 2;
    google.protobuf.StringValue end_time = 3;
    google.protobuf.StringValue window = 4;
    google.protobuf.StringValue operation_names = 5;  // JSON array as string
    google.protobuf.StringValue metrics = 6;  // JSON array as string
    google.protobuf.StringValue duration = 7;
  }

  message FetchLogsTask {
    google.protobuf.StringValue filter_expression = 1;    // Filter expression for logs (e.g., "service.name = 'my-service'")
    google.protobuf.StringValue start_time = 2;
    google.protobuf.StringValue end_time = 3;
    google.protobuf.StringValue duration = 4;
    google.protobuf.Int32Value limit = 5;
  }

  message FetchLogsForTraceTask {
    google.protobuf.StringValue trace_id = 1;             // The specific trace ID to fetch logs for
    google.protobuf.Int32Value limit = 2;                 // Limit number of logs (default: 10)
  }

  message FetchTracesTask {
    google.protobuf.StringValue filter_expression = 1;    // Filter expression for traces (e.g., "name = 'GET /api/users'")
    google.protobuf.StringValue start_time = 2;
    google.protobuf.StringValue end_time = 3;
    google.protobuf.StringValue duration = 4;
    google.protobuf.Int32Value limit = 5;                 // Limit number of traces
  }

  enum TaskType {
    UNKNOWN = 0;
    CLICKHOUSE_QUERY = 1;
    BUILDER_QUERY = 2;
    DASHBOARD_DATA = 3;
    FETCH_DASHBOARDS = 4;
    FETCH_DASHBOARD_DETAILS = 5;
    FETCH_SERVICES = 6;
    FETCH_APM_METRICS = 7;
    FETCH_LOGS = 8;
    FETCH_LOGS_FOR_TRACE = 9;
    FETCH_TRACES = 10;
  }

  TaskType type = 1;
  oneof task {
    ClickhouseQueryTask clickhouse_query = 2;
    BuilderQueryTask builder_query = 3;
    DashboardDataTask dashboard_data = 4;
    FetchDashboardsTask fetch_dashboards = 5;
    FetchDashboardDetailsTask fetch_dashboard_details = 6;
    FetchServicesTask fetch_services = 7;
    FetchApmMetricsTask fetch_apm_metrics = 8;
    FetchLogsTask fetch_logs = 9;
    FetchLogsForTraceTask fetch_logs_for_trace = 10;
    FetchTracesTask fetch_traces = 11;
  }
} 